# gerbv

./: .clang-format  .cvsignore  .git-blame-ignore-revs  .gitignore  AUTHORS  BUGS  CONTRIBUTORS  ChangeLog  ChangeLog_pre20080201  HACKING  INSTALL  INSTALL.MINGW.WIN32  JOURNAL.txt  Makefile.am  NEWS  README  README-Pick-and-Place-search_parts.txt  README-cvs.txt  README-git.txt  README-release.txt  README-win32.txt  README.Pick.and.Place.search_parts  README.md  Structs.txt  TODO  acconfig.h  acinclude.m4  autogen.sh  build_release  clang-format-cache.py  configure.ac  configure.in  cvs-tag.sh  dontdiff  files2tag.txt  icon-theme-installer  install-hooks  rebuild_conf  tags.txt
.github/workflows/: ci.yaml
.mc/: fedora:34.yaml  package-linux.sh  rebuild.sh  ubuntu:20.04.yaml  website.yaml  windows:amd64.yaml
.mc/fedora:34/: fedora:34.yaml
.mc/fedora:35/: fedora:35.yaml
.mc/fedora:36/: fedora:36.yaml
.mc/fedora_38/: fedora_38.yaml
.mc/ubuntu:20.04/: ubuntu:20.04.yaml
.mc/ubuntu:22.04/: ubuntu:22.04.yaml
.mc/ubuntu_22.04/: ubuntu_22.04.yaml
.mc/windows:amd64/: windows:amd64.yaml
.mc/windows_amd64/: windows_amd64.yaml
desktop/: Makefile.am  gerbv.desktop  regen_files
doc/: Doxyfile.nopreprocessing  Makefile.am  Makefile.example  aperturemacro.txt  image2pixmap.fig  projectfiles.txt  sources.txt
doc/PNG-print/: Makefile.am  PNGPrintMiniHowto.txt
doc/eagle/: Makefile.am  eagle2exc.pl  eagle2exc.txt
doc/example-code/: Makefile.am  example1.c  example2.c  example3.c  example4.c  example5.c  example6.c
doc/html/: Makefile.am  amacro_8c-source.html  amacro_8h-source.html  annotated.html  batch_8c-source.html  batch_8h-source.html  classes.html  color_8c-source.html  color_8h-source.html  config_8h-source.html  csv_8c-source.html  csv_8c.html  csv_8h-source.html  csv__defines_8h-source.html  csv__defines_8h.html  dir_000000.html  doxygen.css  draw_8c-source.html  draw_8h-source.html  draw__amacro_8c-source.html  draw__amacro_8h-source.html  drill_8c-source.html  drill_8h-source.html  dynload_8c-source.html  dynload_8h-source.html  exportimage_8c-source.html  exportimage_8h-source.html  files.html  gerb__error_8h-source.html  gerb__file_8c-source.html  gerb__file_8h-source.html  gerb__image_8c-source.html  gerb__image_8h-source.html  gerb__transf_8c-source.html  gerb__transf_8c.html  gerb__transf_8c__incl.dot  gerb__transf_8c__incl.md5  gerb__transf_8c_a3_cgraph.dot  gerb__transf_8c_a3_cgraph.md5  gerb__transf_8c_a4_cgraph.dot  (+60 more)
example/: Makefile.am  numpres.pcb  numpres.pcb.output_group1.grb  numpres.pcb.output_group2.grb  numpres.pcb.output_plated-drill.grb  numpres.pcb.output_soldermask.grb
example/Mentor-BoardStation/: Makefile.am  README.txt  artwork_1.grb
example/am-test/: Makefile.am  am-test.gbx
example/am-test2/: README.txt
example/amacro-ref/: 1.grb  README.txt  full-ex.grb  gerbv_am_expression_bug.ger  jj1.drl  jj1.grb  limit-ex.grb  stp0.grb
example/cslk/: Makefile.am  README.txt  cslk.gbx  cslk.ps
example/dan/: Makefile.am  README.txt
example/eaglecad1/: Makefile.am  top-cop.gbx
example/ekf/: README  ekf.gap  ekf_08.apt  l1.off
example/ekf2/: Makefile.am  d1.grb  drill1.exc  drill20.exc  drill30.exc  gnd.grb  l0.grb  l1.grb  l2.grb  l5.grb  pow.grb  pow3.grb  resplan.grb  sieb0.grb  sieb1.grb  stp0.grb  stp1.grb
example/exposure/: Makefile.am  README.txt  example.grb
example/hellboard/: README  hellboard.back.gbr  hellboard.fab.gbr  hellboard.front.gbr  hellboard.group1.gbr  hellboard.group2.gbr  hellboard.pcb  hellboard.plated-drill.cnc
example/jj/: Makefile.am  l1-1.grb  l1-2.grb  l1-3.grb
example/nollezappare/: AssemblyTop.gdo  EtchLayer2Bottom.gdo  Makefile.am  ThruHolePlated.ncd
example/numpres/: Makefile.am  numpres.pcb.output_componentmask.grb  numpres.pcb.output_componentsilk.grb  numpres.pcb.output_unplated-drill.grb
example/orcad/: Makefile.am  README.txt  ast.ps  rs232_cm.asb  (+9 more)
example/rs274-x2/HeadControl2/: HeadControl2.GBL  HeadControl2.GBO  HeadControl2.GBP  HeadControl2.GBS  HeadControl2.GD1  HeadControl2.GTL  HeadControl2.GTO  HeadControl2.GTP  HeadControl2.GTS  HeadControl2.TXT  HeadControl2.csv  HeadControl2.ipc  Makefile.am
example/rs274-x2/HeadControl2/x2/: HeadControl2.GBL
gerbv.github.io/: .gitignore  Makefile  README.md  index.html.m4
man/: .cvsignore  .gitignore  Makefile.am  gerbv.1  gerbv.1.in  gerbv.ru.1.in.po
po/: .gitignore  LINGUAS  Makevars  POTFILES  POTFILES.in  ja.po  ru.po
scheme/: Makefile.am  gbx2ps.scm  gerb-debug.scm  gerb-ps.scm  parse-gerber.scm  pgt.scm
src/: .cvsignore  Makefile.am  amacro.c  amacro.h  attribute.c  attribute.h  batch.c  batch.h  callbacks.c  callbacks.h  color.c  color.h  common.h  csv.c  csv.h  csv_defines.h  draw-gdk.c  draw-gdk.h  draw.c  draw.h  draw_amacro.c  draw_amacro.h  draw_gdk.c  draw_gdk.h  draw_ps.c  draw_ps.h  drill.c  drill.h  drill_stats.c  drill_stats.h  dynload.c  dynload.h  export-drill.c  export-drill.h  export-dxf.cpp  export-geda-pcb.c  export-image.c  export-isel-drill.c  export-rs274x.c  export-rs274x.h  (+78 more)
test/: Makefile.am  README.txt  gerbv.supp  run_tests.sh  run_valgrind_tests.sh  test-drill.list  tests.list
test/golden/: Makefile.am
test/inputs/: Altium_file_format_inch.drl  Altium_inch_file_format.drl  LimeSDR-QPCIe_1v2-RoundHoles.drl  Makefile  Makefile.am  Makefile.in  empty.xnc  parse_aperture_strtok.1.poc  parse_aperture_strtok.2.poc  test-aperture-circle-full.gbx  test-aperture-macro-line21-rotation.gbx  test-circular-interpolation-1.gbx  test-circular-interpolation-mq-ccw.gbx  test-circular-interpolation-zero-error.gbx  test-drill-195-with-comments.exc  test-drill-195-without-comments.exc  test-drill-slot-drilled-g85.exc  test-drill-spaces.exc  test-drill-trailing-zero-suppression.exc  test-drill-trailing-zero-suppression.gvp  test-layer-mode-1.gbx  test-merge-a.gbx  test-merge-b.gbx  test-out-of-bounds-drill-tool.exc
utils/: clang-format-cache.py  cvs2cl.pl  git-version-gen.sh  git2cl  install-hooks  umap
win32/: Makefile.am  Readme.txt  build_gerbv  extract_gtk_win32  gerbv.nsi.in  registerExtension.nsh
(+88 files in other folders)
